# exchange-simulation

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  build.sh  master_plan.md  setup.sh  smoke_test_all.sh  smoke_test_cme.sh  test.sh
benchmarks/: BUILD.bazel  exchange_benchmark.cc  run_benchmark.sh  throughput_boundary.cc
cme/: BUILD.bazel  cme_exchange.h  cme_exchange_test.cc  cme_lifecycle_test.cc  cme_products.h  cme_products_test.cc  cme_sim_runner.cc  cme_simulator.h  cme_simulator_test.cc  cme_spreads.h  cme_spreads_test.cc  ilink3_gateway.h  ilink3_gateway_test.cc  ilink3_report_publisher.h  ilink3_report_publisher_test.cc  mdp3_feed_publisher.h  mdp3_feed_publisher_test.cc  sim_config.h
cme/codec/: BUILD.bazel  codec_roundtrip_test.cc  ilink3_decoder.h  ilink3_decoder_test.cc  ilink3_encoder.h  ilink3_encoder_test.cc  ilink3_messages.h  ilink3_messages_test.cc  mdp3_decoder.h  mdp3_decoder_test.cc  mdp3_encoder.h  mdp3_encoder_test.cc  mdp3_messages.h  mdp3_messages_test.cc  sbe_header.h  sbe_header_test.cc
cme/e2e/: BUILD.bazel  e2e_journal_test.cc  e2e_test_runner.cc  e2e_test_runner.h  e2e_test_runner_test.cc
exchange-core/: BUILD.bazel  allocation_match_test.cc  auction_test.cc  composite_listener.h  composite_listener_test.cc  daily_limits_test.cc  events.h  events_test.cc  exchange_core.cc  exchange_core.h  exchange_core_test.cc  for_each_level_test.cc  iceberg_test.cc  implied_fills_test.cc  intrusive_list.h  intrusive_list_test.cc  listeners.h  listeners_test.cc  lmm_engine_test.cc  lmm_match_test.cc  match_algo.h  match_algo_test.cc  matching_engine.h  matching_engine_test.cc  object_pool.h  object_pool_test.cc  ohlcv.h  ohlcv_test.cc  order_persistence.h  order_persistence_test.cc  order_restore_test.cc  orderbook.cc  orderbook.h  orderbook_test.cc  position_limit_engine_test.cc  position_tracker.h  position_tracker_test.cc  rate_throttle_integration_test.cc  rate_tracker.h  rate_tracker_test.cc  (+14 more)
exchange-sim/: BUILD.bazel  exchange_simulator.h  exchange_simulator_test.cc  instrument_config.h
exchange-sim/spread_book/: BUILD.bazel  circular_guard.h  circular_guard_test.cc  implied_price_engine.h  implied_price_engine_test.cc  multi_leg_coordinator.h  spread_book.h  spread_book_test.cc  spread_e2e_test.cc  spread_events.h  spread_failure_test.cc  spread_instrument_config.h  spread_integration_test.cc  spread_simulator.h  spread_strategy.h  spread_strategy_registry.h  spread_strategy_test.cc
ice/: BUILD.bazel  gtbpr_integration_test.cc  gtbpr_match.h  gtbpr_match_test.cc  ice_exchange.h  ice_exchange_test.cc  ice_products.h  ice_products_test.cc  ice_sim_config.h  ice_sim_config_test.cc  ice_sim_runner.cc  ice_simulator.h  ice_simulator_test.cc  ice_spreads.h  ice_spreads_test.cc
ice/e2e/: BUILD.bazel  ice_e2e_journal_test.cc  ice_e2e_test_runner.cc  ice_e2e_test_runner.h  ice_e2e_test_runner_test.cc
ice/fix/: BUILD.bazel  fix_encoder.h  fix_encoder_test.cc  fix_parser.cc  fix_parser.h  fix_parser_test.cc  ice_fix_exec_publisher.h  ice_fix_exec_publisher_test.cc  ice_fix_gateway.h  ice_fix_gateway_test.cc  ice_fix_messages.h  ice_fix_pipeline_test.cc
ice/impact/: BUILD.bazel  impact_codec_test.cc  impact_decoder.h  impact_decoder_test.cc  impact_encoder.h  impact_encoder_test.cc  impact_messages.h  impact_messages_test.cc  impact_publisher.h  impact_publisher_test.cc
krx/: BUILD.bazel  krx_exchange.h  krx_exchange_test.cc  krx_integration_test.cc  krx_products.h  krx_products_test.cc  krx_sim_config.h  krx_sim_config_test.cc  krx_sim_runner.cc  krx_simulator.h  krx_simulator_test.cc  krx_spreads.h  krx_spreads_test.cc
krx/e2e/: BUILD.bazel  krx_e2e_journal_test.cc  krx_e2e_test_runner.cc  krx_e2e_test_runner.h  (+1 more)
test-harness/: BUILD.bazel  journal_parser.cc  journal_parser.h  journal_parser_test.cc  journal_writer.cc  journal_writer.h  journal_writer_test.cc  recorded_event.cc  recorded_event.h  recorded_event_test.cc  recording_listener.h  recording_listener_test.cc  test_runner.cc  test_runner.h  test_runner_test.cc
test-journals/: BUILD.bazel  auction_empty_book.journal  auction_full_lifecycle.journal  auction_iceberg.journal  auction_indicative_price.journal  auction_multiple_levels.journal  auction_no_cross.journal  auction_partial_fill.journal  auction_reference_tiebreak.journal  auction_simple_cross.journal  basic_limit_buy.journal  basic_limit_sell.journal  cancel_already_filled.journal  cancel_partial_fill.journal  cancel_resting.journal  cancel_stop_order.journal  cancel_unknown.journal  daily_price_limits.journal  day_expiry.journal  economics_auction_price_volume.journal  economics_auction_surplus.journal  economics_fill_price_accuracy.journal  economics_iceberg_total_qty.journal  economics_modify_no_double_count.journal  economics_multi_level_sweep.journal  economics_partial_fill_remaining.journal  economics_pro_rata_allocation.journal  economics_pro_rata_rounding.journal  economics_quantity_conservation.journal  empty_book_cancel.journal  fifo_priority.journal  fok_full_fill.journal  fok_multi_level.journal  fok_no_fill.journal  generate_auction_journals.cc  generate_coverage_journals.cc  generate_e2e_journals.cc  generate_economics_journals.cc  generate_ice_journals.cc  generate_important_journals.cc  (+65 more)
tools/: BUILD.bazel  cme_recovery.h  cme_recovery_test.cc  cme_secdef.h  cme_secdef_test.cc  display_state.h  event_logger.h  event_logger_test.cc  exchange_dashboard.cc  exchange_dashboard_test.cc  exchange_observer.cc  exchange_observer_test.cc  exchange_trader.cc  ice_recovery.h  ice_recovery_test.cc  ice_secdef.h  ice_secdef_test.cc  ilink3_replayer.h  ilink3_replayer_test.cc  ilink3_send_order.cc  instrument_info.h  instrument_info_test.cc  journal_reconciler.cc  journal_reconciler.h  journal_reconciler_test.cc  krx_recovery.h  krx_recovery_test.cc  krx_secdef.h  krx_secdef_test.cc  latency_logger.h  latency_logger_test.cc  mdp3_replayer.h  mdp3_replayer_main.cc  mdp3_replayer_test.cc  null_recovery.h  null_recovery_test.cc  orderbook_state.cc  orderbook_state.h  orderbook_state_test.cc  pcap_reader.h  (+26 more)
(+85 files in other folders)
