load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "cme_exchange",
    hdrs = ["cme_exchange.h"],
    deps = ["//exchange-core:matching_engine"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cme_products",
    hdrs = ["cme_products.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cme_exchange_test",
    srcs = ["cme_exchange_test.cc"],
    deps = [
        ":cme_exchange",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cme_products_test",
    srcs = ["cme_products_test.cc"],
    deps = [
        ":cme_exchange",
        ":cme_products",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "cme_simulator",
    hdrs = ["cme_simulator.h"],
    deps = [
        ":cme_exchange",
        ":cme_products",
        "//exchange-sim:exchange_simulator",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cme_simulator_test",
    srcs = ["cme_simulator_test.cc"],
    deps = [
        ":cme_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cme_lifecycle_test",
    srcs = ["cme_lifecycle_test.cc"],
    deps = [
        ":cme_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ilink3_gateway",
    hdrs = ["ilink3_gateway.h"],
    deps = [
        "//cme/codec:ilink3_decoder",
        "//cme/codec:ilink3_messages",
        "//exchange-core:matching_engine",
        "//exchange-sim:exchange_simulator",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ilink3_gateway_test",
    srcs = ["ilink3_gateway_test.cc"],
    deps = [
        ":ilink3_gateway",
        ":cme_simulator",
        "//cme/codec:ilink3_encoder",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ilink3_report_publisher",
    hdrs = ["ilink3_report_publisher.h"],
    deps = [
        "//cme/codec:ilink3_encoder",
        "//exchange-core:listeners",
        "//exchange-core:types",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ilink3_report_publisher_test",
    srcs = ["ilink3_report_publisher_test.cc"],
    deps = [
        ":ilink3_report_publisher",
        ":cme_simulator",
        "//cme/codec:ilink3_messages",
        "//cme/codec:sbe_header",
        "//exchange-core:composite_listener",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "mdp3_feed_publisher",
    hdrs = ["mdp3_feed_publisher.h"],
    deps = [
        "//cme/codec:mdp3_encoder",
        "//exchange-core:listeners",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mdp3_feed_publisher_test",
    srcs = ["mdp3_feed_publisher_test.cc"],
    deps = [
        ":mdp3_feed_publisher",
        ":cme_simulator",
        "//cme/codec:mdp3_messages",
        "//cme/codec:sbe_header",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

