load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "types",
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "types_test",
    srcs = ["types_test.cc"],
    deps = [
        ":types",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "events",
    hdrs = ["events.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "events_test",
    srcs = ["events_test.cc"],
    deps = [
        ":events",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "object_pool",
    hdrs = ["object_pool.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "object_pool_test",
    srcs = ["object_pool_test.cc"],
    deps = [
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "spsc_ring_buffer",
    hdrs = ["spsc_ring_buffer.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spsc_ring_buffer_test",
    srcs = ["spsc_ring_buffer_test.cc"],
    deps = [
        ":spsc_ring_buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "intrusive_list",
    hdrs = ["intrusive_list.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "intrusive_list_test",
    srcs = ["intrusive_list_test.cc"],
    deps = [
        ":intrusive_list",
        "@googletest//:gtest_main",
    ],
)
