load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "types",
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "types_test",
    srcs = ["types_test.cc"],
    deps = [
        ":types",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "events",
    hdrs = ["events.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "events_test",
    srcs = ["events_test.cc"],
    deps = [
        ":events",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "object_pool",
    hdrs = ["object_pool.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "object_pool_test",
    srcs = ["object_pool_test.cc"],
    deps = [
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "spsc_ring_buffer",
    hdrs = ["spsc_ring_buffer.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spsc_ring_buffer_test",
    srcs = ["spsc_ring_buffer_test.cc"],
    deps = [
        ":spsc_ring_buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "listeners",
    hdrs = ["listeners.h"],
    deps = [":events"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "listeners_test",
    srcs = ["listeners_test.cc"],
    deps = [
        ":listeners",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "intrusive_list",
    hdrs = ["intrusive_list.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "intrusive_list_test",
    srcs = ["intrusive_list_test.cc"],
    deps = [
        ":intrusive_list",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "composite_listener",
    hdrs = ["composite_listener.h"],
    deps = [":listeners"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "composite_listener_test",
    srcs = ["composite_listener_test.cc"],
    deps = [
        ":composite_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "orderbook",
    srcs = ["orderbook.cc"],
    hdrs = ["orderbook.h"],
    deps = [":types", ":intrusive_list"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "orderbook_test",
    srcs = ["orderbook_test.cc"],
    deps = [
        ":orderbook",
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "stop_book",
    srcs = ["stop_book.cc"],
    hdrs = ["stop_book.h"],
    deps = [":types", ":intrusive_list"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "stop_book_test",
    srcs = ["stop_book_test.cc"],
    deps = [
        ":stop_book",
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "match_algo",
    hdrs = ["match_algo.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "match_algo_test",
    srcs = ["match_algo_test.cc"],
    deps = [
        ":match_algo",
        ":intrusive_list",
        "@googletest//:gtest_main",
    ],
)
