load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "types",
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "types_test",
    srcs = ["types_test.cc"],
    deps = [
        ":types",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "events",
    hdrs = ["events.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "events_test",
    srcs = ["events_test.cc"],
    deps = [
        ":events",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "object_pool",
    hdrs = ["object_pool.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "object_pool_test",
    srcs = ["object_pool_test.cc"],
    deps = [
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "spsc_ring_buffer",
    hdrs = ["spsc_ring_buffer.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spsc_ring_buffer_test",
    srcs = ["spsc_ring_buffer_test.cc"],
    deps = [
        ":spsc_ring_buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "listeners",
    hdrs = ["listeners.h"],
    deps = [":events"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "listeners_test",
    srcs = ["listeners_test.cc"],
    deps = [
        ":listeners",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "intrusive_list",
    hdrs = ["intrusive_list.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "intrusive_list_test",
    srcs = ["intrusive_list_test.cc"],
    deps = [
        ":intrusive_list",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "composite_listener",
    hdrs = ["composite_listener.h"],
    deps = [":listeners"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "composite_listener_test",
    srcs = ["composite_listener_test.cc"],
    deps = [
        ":composite_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "orderbook",
    srcs = ["orderbook.cc"],
    hdrs = ["orderbook.h"],
    deps = [":types", ":intrusive_list"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "orderbook_test",
    srcs = ["orderbook_test.cc"],
    deps = [
        ":orderbook",
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "stop_book",
    srcs = ["stop_book.cc"],
    hdrs = ["stop_book.h"],
    deps = [":types", ":intrusive_list"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "stop_book_test",
    srcs = ["stop_book_test.cc"],
    deps = [
        ":stop_book",
        ":object_pool",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "match_algo",
    hdrs = ["match_algo.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "match_algo_test",
    srcs = ["match_algo_test.cc"],
    deps = [
        ":match_algo",
        ":intrusive_list",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lmm_match_test",
    srcs = ["lmm_match_test.cc"],
    deps = [
        ":match_algo",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lmm_engine_test",
    srcs = ["lmm_engine_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "threshold_prorata_test",
    srcs = ["threshold_prorata_test.cc"],
    deps = [
        ":match_algo",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "allocation_match_test",
    srcs = ["allocation_match_test.cc"],
    deps = [
        ":match_algo",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "split_match_test",
    srcs = ["split_match_test.cc"],
    deps = [
        ":match_algo",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "top_lmm_match_test",
    srcs = ["top_lmm_match_test.cc"],
    deps = [
        ":match_algo",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ohlcv",
    hdrs = ["ohlcv.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ohlcv_test",
    srcs = ["ohlcv_test.cc"],
    deps = [":ohlcv", "@googletest//:gtest_main"],
)

cc_library(
    name = "rate_tracker",
    hdrs = ["rate_tracker.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "rate_tracker_test",
    srcs = ["rate_tracker_test.cc"],
    deps = [
        ":rate_tracker",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "position_tracker",
    hdrs = ["position_tracker.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "position_tracker_test",
    srcs = ["position_tracker_test.cc"],
    deps = [
        ":position_tracker",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "trade_registry",
    hdrs = ["trade_registry.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "trade_registry_test",
    srcs = ["trade_registry_test.cc"],
    deps = [
        ":trade_registry",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "matching_engine",
    hdrs = ["matching_engine.h"],
    deps = [
        ":types",
        ":events",
        ":listeners",
        ":object_pool",
        ":intrusive_list",
        ":orderbook",
        ":stop_book",
        ":match_algo",
        ":order_persistence",
        ":rate_tracker",
        ":trade_registry",
        ":position_tracker",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "trade_bust_test",
    srcs = ["trade_bust_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "position_limit_engine_test",
    srcs = ["position_limit_engine_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "volatility_auction_test",
    srcs = ["volatility_auction_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "daily_limits_test",
    srcs = ["daily_limits_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "matching_engine_test",
    srcs = ["matching_engine_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iceberg_test",
    srcs = ["iceberg_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "auction_test",
    srcs = ["auction_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rate_throttle_integration_test",
    srcs = ["rate_throttle_integration_test.cc"],
    deps = [
        ":matching_engine",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "order_persistence",
    hdrs = ["order_persistence.h"],
    deps = [":types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "order_persistence_test",
    srcs = ["order_persistence_test.cc"],
    deps = [
        ":order_persistence",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "order_restore_test",
    srcs = ["order_restore_test.cc"],
    deps = [
        ":matching_engine",
        ":order_persistence",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)
