load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "instrument_config",
    hdrs = ["instrument_config.h"],
    deps = ["//exchange-core:matching_engine"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "exchange_simulator",
    hdrs = ["exchange_simulator.h"],
    deps = [
        ":instrument_config",
        "//exchange-core:matching_engine",
        "//exchange-core:ohlcv",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "exchange_simulator_test",
    srcs = ["exchange_simulator_test.cc"],
    deps = [
        ":exchange_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)
