load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "gtbpr_match",
    hdrs = ["gtbpr_match.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "gtbpr_match_test",
    srcs = ["gtbpr_match_test.cc"],
    deps = [
        ":gtbpr_match",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ice_exchange",
    hdrs = ["ice_exchange.h"],
    deps = ["//exchange-core:matching_engine"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_exchange_test",
    srcs = ["ice_exchange_test.cc"],
    deps = [
        ":ice_exchange",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)
