load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "gtbpr_match",
    hdrs = ["gtbpr_match.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "gtbpr_match_test",
    srcs = ["gtbpr_match_test.cc"],
    deps = [
        ":gtbpr_match",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ice_exchange",
    hdrs = ["ice_exchange.h"],
    deps = ["//exchange-core:matching_engine"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_exchange_test",
    srcs = ["ice_exchange_test.cc"],
    deps = [
        ":ice_exchange",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ice_products",
    hdrs = ["ice_products.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_products_test",
    srcs = ["ice_products_test.cc"],
    deps = [
        ":ice_products",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "gtbpr_integration_test",
    srcs = ["gtbpr_integration_test.cc"],
    deps = [
        ":gtbpr_match",
        ":ice_exchange",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ice_simulator",
    hdrs = ["ice_simulator.h"],
    deps = [
        ":gtbpr_match",
        ":ice_exchange",
        ":ice_products",
        "//exchange-sim:exchange_simulator",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_simulator_test",
    srcs = ["ice_simulator_test.cc"],
    deps = [
        ":ice_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ice_sim_config",
    hdrs = ["ice_sim_config.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_sim_config_test",
    srcs = ["ice_sim_config_test.cc"],
    deps = [
        ":ice_sim_config",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ice_spreads",
    hdrs = ["ice_spreads.h"],
    deps = [
        ":ice_products",
        "//exchange-sim/spread_book:spread_instrument_config",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_spreads_test",
    srcs = ["ice_spreads_test.cc"],
    deps = [
        ":ice_products",
        ":ice_spreads",
        "@googletest//:gtest_main",
    ],
)

# --- ICE Live Simulator Binary ---
cc_binary(
    name = "ice-sim",
    srcs = ["ice_sim_runner.cc"],
    deps = [
        ":ice_products",
        ":ice_sim_config",
        ":ice_simulator",
        "//exchange-core:composite_listener",
        "//ice/fix:fix_parser",
        "//ice/fix:ice_fix_exec_publisher",
        "//ice/fix:ice_fix_gateway",
        "//ice/fix:ice_fix_messages",
        "//ice/impact:impact_encoder",
        "//ice/impact:impact_publisher",
        "//tools:shm_listener",
        "//tools:shm_transport",
        "//tools:tcp_server",
        "//tools:udp_multicast",
    ],
)
