load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "krx_exchange",
    hdrs = ["krx_exchange.h"],
    deps = ["//exchange-core:matching_engine"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_exchange_test",
    srcs = ["krx_exchange_test.cc"],
    deps = [
        ":krx_exchange",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_products",
    hdrs = ["krx_products.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_products_test",
    srcs = ["krx_products_test.cc"],
    deps = [
        ":krx_products",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_simulator",
    hdrs = ["krx_simulator.h"],
    deps = [
        ":krx_exchange",
        ":krx_products",
        "//exchange-sim:exchange_simulator",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_simulator_test",
    srcs = ["krx_simulator_test.cc"],
    deps = [
        ":krx_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "krx_integration_test",
    srcs = ["krx_integration_test.cc"],
    deps = [
        ":krx_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_sim_config",
    hdrs = ["krx_sim_config.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_sim_config_test",
    srcs = ["krx_sim_config_test.cc"],
    deps = [
        ":krx_sim_config",
        "@googletest//:gtest_main",
    ],
)
