load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "krx_exchange",
    hdrs = ["krx_exchange.h"],
    deps = ["//exchange-core:matching_engine"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_exchange_test",
    srcs = ["krx_exchange_test.cc"],
    deps = [
        ":krx_exchange",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_products",
    hdrs = ["krx_products.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_products_test",
    srcs = ["krx_products_test.cc"],
    deps = [
        ":krx_products",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_spreads",
    hdrs = ["krx_spreads.h"],
    deps = [
        ":krx_products",
        "//exchange-sim/spread_book:spread_instrument_config",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_spreads_test",
    srcs = ["krx_spreads_test.cc"],
    deps = [
        ":krx_products",
        ":krx_spreads",
        "//exchange-sim/spread_book:spread_strategy_registry",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_simulator",
    hdrs = ["krx_simulator.h"],
    deps = [
        ":krx_exchange",
        ":krx_products",
        "//exchange-sim:exchange_simulator",
        "//exchange-sim/spread_book:spread_instrument_config",
        "//exchange-sim/spread_book:spread_simulator",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_simulator_test",
    srcs = ["krx_simulator_test.cc"],
    deps = [
        ":krx_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "krx_integration_test",
    srcs = ["krx_integration_test.cc"],
    deps = [
        ":krx_simulator",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_sim_config",
    hdrs = ["krx_sim_config.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_sim_config_test",
    srcs = ["krx_sim_config_test.cc"],
    deps = [
        ":krx_sim_config",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "krx-sim",
    srcs = ["krx_sim_runner.cc"],
    deps = [
        ":krx_products",
        ":krx_sim_config",
        ":krx_simulator",
        "//exchange-core:composite_listener",
        "//krx/fast:fast_encoder",
        "//krx/fast:fast_publisher",
        "//krx/fix:krx_fix_exec_publisher",
        "//krx/fix:krx_fix_gateway",
        "//tools:shm_listener",
        "//tools:shm_transport",
        "//tools:tcp_server",
        "//tools:udp_multicast",
    ],
    linkopts = ["-lrt"],
    visibility = ["//visibility:public"],
)
