load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

# --- Task 19 ---
cc_library(
    name = "recorded_event",
    hdrs = ["recorded_event.h"],
    srcs = ["recorded_event.cc"],
    deps = ["//exchange-core:events"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "recorded_event_test",
    srcs = ["recorded_event_test.cc"],
    deps = [":recorded_event", "@googletest//:gtest_main"],
)

# --- Task 20 ---
cc_library(
    name = "recording_listener",
    hdrs = ["recording_listener.h"],
    deps = [
        "//exchange-core:listeners",
        ":recorded_event",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "recording_listener_test",
    srcs = ["recording_listener_test.cc"],
    deps = [":recording_listener", "@googletest//:gtest_main"],
)

cc_library(
    name = "journal_parser",
    hdrs = ["journal_parser.h"],
    srcs = ["journal_parser.cc"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "journal_parser_test",
    srcs = ["journal_parser_test.cc"],
    deps = [":journal_parser", "@googletest//:gtest_main"],
)
