load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "journal_test",
    srcs = ["journal_test.cc"],
    data = glob(["*.journal"]),
    deps = [
        "//test-harness:test_runner",
        "//test-harness:journal_parser",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "generate_stress_journals",
    srcs = ["generate_stress_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_auction_journals",
    srcs = ["generate_auction_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_economics_journals",
    srcs = ["generate_economics_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_important_journals",
    srcs = ["generate_important_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_coverage_journals",
    srcs = ["generate_coverage_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)
