load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

filegroup(
    name = "e2e_journals",
    srcs = glob(
        ["e2e/*.journal"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cme_journals",
    srcs = glob(
        ["cme/*.journal"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ice_journals",
    srcs = glob(
        ["ice/*.journal"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "journal_test",
    srcs = ["journal_test.cc"],
    data = glob(["*.journal"]),
    deps = [
        "//test-harness:test_runner",
        "//test-harness:journal_parser",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "generate_stress_journals",
    srcs = ["generate_stress_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_auction_journals",
    srcs = ["generate_auction_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_economics_journals",
    srcs = ["generate_economics_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_important_journals",
    srcs = ["generate_important_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_coverage_journals",
    srcs = ["generate_coverage_journals.cc"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:match_algo",
        "//test-harness:recording_listener",
        "//test-harness:journal_parser",
        "//test-harness:journal_writer",
    ],
)

cc_binary(
    name = "generate_e2e_journals",
    srcs = ["generate_e2e_journals.cc"],
    deps = [
        "//cme:cme_simulator",
        "//cme:ilink3_gateway",
        "//cme:ilink3_report_publisher",
        "//cme:mdp3_feed_publisher",
        "//cme/codec:ilink3_decoder",
        "//cme/codec:ilink3_encoder",
        "//cme/codec:ilink3_messages",
        "//cme/codec:mdp3_decoder",
        "//cme/codec:mdp3_messages",
        "//cme/codec:sbe_header",
        "//exchange-core:composite_listener",
        "//test-harness:recording_listener",
    ],
)

cc_binary(
    name = "generate_ice_journals",
    srcs = ["generate_ice_journals.cc"],
    deps = [
        "//exchange-core:composite_listener",
        "//ice:ice_simulator",
        "//ice/fix:fix_encoder",
        "//ice/fix:fix_parser",
        "//ice/fix:ice_fix_exec_publisher",
        "//ice/impact:impact_decoder",
        "//ice/impact:impact_publisher",
        "//test-harness:recording_listener",
    ],
)
